[gd_scene load_steps=3 format=3 uid="uid://1rjt8fuyqy2p"]

[ext_resource type="Script" path="res://addons/applovin_max/Example/Scenes/main.gd" id="1_cxe6q"]

[sub_resource type="Theme" id="Theme_5r1ue"]

[node name="MainUI" type="Node"]
script = ExtResource("1_cxe6q")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = -40.0
offset_right = 40.0
offset_bottom = 727.0
grow_horizontal = 2
theme_override_constants/margin_top = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
stretch_mode = 2

[node name="StatusContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 40
theme_override_constants/margin_bottom = 40

[node name="StatusBackground" type="ColorRect" parent="MarginContainer/VBoxContainer/StatusContainer"]
custom_minimum_size = Vector2(1440, 140)
layout_mode = 2
color = Color(0.360784, 0.607843, 0.32549, 1)

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer/StatusContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "SDK STATUS
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MediationDebuggerButtonContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="MediationDebuggerButton" type="Button" parent="MarginContainer/VBoxContainer/MediationDebuggerButtonContainer"]
layout_mode = 2
theme = SubResource("Theme_5r1ue")
theme_override_font_sizes/font_size = 70
disabled = true
text = "Mediation Debugger
"

[node name="InterButtonContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="InterButton" type="Button" parent="MarginContainer/VBoxContainer/InterButtonContainer"]
layout_mode = 2
theme = SubResource("Theme_5r1ue")
theme_override_font_sizes/font_size = 70
disabled = true
text = "Load Interstitial
"

[node name="RewardedButtonContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="RewardedButton" type="Button" parent="MarginContainer/VBoxContainer/RewardedButtonContainer"]
layout_mode = 2
theme = SubResource("Theme_5r1ue")
theme_override_font_sizes/font_size = 70
disabled = true
text = "Load Rewarded Ad"

[node name="BannerButtonContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="BannerButton" type="Button" parent="MarginContainer/VBoxContainer/BannerButtonContainer"]
layout_mode = 2
theme = SubResource("Theme_5r1ue")
theme_override_font_sizes/font_size = 70
disabled = true
text = "Show Banner"

[node name="MRECButtonContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="MRECButton" type="Button" parent="MarginContainer/VBoxContainer/MRECButtonContainer"]
layout_mode = 2
theme = SubResource("Theme_5r1ue")
theme_override_font_sizes/font_size = 70
disabled = true
text = "Show MREC"

[connection signal="pressed" from="MarginContainer/VBoxContainer/MediationDebuggerButtonContainer/MediationDebuggerButton" to="." method="_on_mediation_debugger_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/InterButtonContainer/InterButton" to="." method="_on_inter_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/RewardedButtonContainer/RewardedButton" to="." method="_on_rewarded_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BannerButtonContainer/BannerButton" to="." method="_on_banner_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MRECButtonContainer/MRECButton" to="." method="_on_mrec_button_pressed"]
